# dronecontrol

./: .gitignore  README.md  config.yaml  gru-best.ckpt  main.py  pyproject.toml  requirements.txt  rnn-best.ckpt  run_model.py  run_optim.py  run_optim_profile.py  run_optim_report.py
logs/accel_vs_voltage/linear/version_0/: hparams.yaml
logs/accel_vs_voltage/version_0/: hparams.yaml  metrics.csv
logs/accel_vs_voltage/version_1/: hparams.yaml  metrics.csv
logs/accel_vs_voltage/version_2/: hparams.yaml  metrics.csv
matlabfiles/: quadcopter_build.m  quadcopter_model.p  quadcopter_wrapper.m  rk4_step.m  simulate_rk4.m  simulate_rk4_final.m
matlabfiles/codegen/dll/quadcopter_model/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  (+15 more)
models/accel_vs_voltage/: gru-epoch=26-val_loss=118.6105.ckpt  gru-epoch=31-val_loss=118.6438.ckpt  gru-epoch=33-val_loss=118.6992.ckpt
models/gru/: gru-best.ckpt
optimization_results/: u_opt_gru.pt
scripts/: cli.py
scripts/old/: run_control_demo.py  run_optim.py  run_optim_profile_summary.txt  run_optim_report.py
src/: data_acquisition.py  data_augmentation.py  model_training.py  report_generation.py
src/dronecontrol/: control_validation.py  data_cleaning.py  globals.py  model_training.py  report_generation.py  utils.py
src/dronecontrol/cli/: __init__.py  report.py  train.py
src/dronecontrol/commande/: MPC_cvxpy.py  MPC_torch.py  base_mpc.py  control_runner.py  loss.py  neural_ekf.py  optimizer.py  simple_optimizer.py  traj_computer.py
src/dronecontrol/data_process/: data_acquisition.py  data_augmentation.py  data_cleaning.py  data_loader.py  dataset.py  preparation.py
src/dronecontrol/models/: __init__.py  base_module.py  gru_module.py  linear_module.py  lstm.py  rnn.py  rnn_module.py
src/dronecontrol/simulink/: __init__.py  engine.py  generate_data.py  main_data_generation.py  simulator.py
src/models/: __init__.py  base_module.py  gru_module.py  rnn_module.py
tests/commande/: test_simple_optim.py
(+20 files in other folders)
