[project]
name = "dronecontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.5.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "torch>=2.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./src"]
include = ["dronecontrol"]
exclude = ["tests*", "*.tests*", "*.tests"]
