[project]
name = "dronecontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
    "filterpy>=1.4.5",
    "ipykernel>=7.1.0",
    "lightning>=2.5.5",
    "matlab>=0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "reportlab>=4.4.4",
    "scikit-learn>=1.5.0",
    "torch>=2.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./src"]
include = ["dronecontrol"]
exclude = ["tests*", "*.tests*", "*.tests"]
